// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ACTORITEM SNAPSHOTS TESTS large ActorItem should not be changed 1`] = `
<a
  class="container "
  href="actors/1"
>
  <div
    class="container__imageContainer"
  >
    <div
      class="container__imageWrapper"
    >
      <img
        alt="Имя Фамилия"
        class="container__image"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="/_next/image?url=%2Fimg.jpg&w=3840&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg.jpg&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
    <div
      class="container__amountBadge"
    >
      4
    </div>
  </div>
  <div
    class="container__textContainer"
  >
    <h2
      class="container__fullName"
    >
      Имя
      <br />
      Фамилия
    </h2>
    <p
      class="container__amountMovies"
    >
      4
       
      фильма
    </p>
  </div>
</a>
`;

exports[`ACTORITEM SNAPSHOTS TESTS medium ActorItem should not be changed 1`] = `
<a
  class="container "
  href="actors/1"
>
  <div
    class="container__imageContainer"
  >
    <div
      class="container__imageWrapper"
    >
      <img
        alt="Имя Фамилия"
        class="container__image"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="/_next/image?url=%2Fimg.jpg&w=3840&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg.jpg&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
  </div>
  <div
    class="container__textContainer"
  >
    <h2
      class="container__fullName"
    >
      Имя
      <br />
      Фамилия
    </h2>
    <p
      class="container__amountMovies"
    >
      4
       
      фильма
    </p>
  </div>
</a>
`;

exports[`ACTORITEM SNAPSHOTS TESTS small ActorItem should not be changed 1`] = `
<a
  class="container "
  href="actors/1"
>
  <div
    class="container__imageContainer"
  >
    <div
      class="container__imageWrapper"
    >
      <img
        alt="Имя Фамилия"
        class="container__image"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="/_next/image?url=%2Fimg.jpg&w=3840&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg.jpg&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
  </div>
  <div
    class="container__textContainer"
  >
    <h2
      class="container__fullName"
    >
      Имя
      <br />
      Фамилия
    </h2>
    <h3
      class="container__role"
    >
      Роль
    </h3>
  </div>
</a>
`;
